<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/what_do_you_hear"
        android:textAllCaps="true"
        android:textColor="#EF6C00"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/the_speaker_will_read_out_a_word_please_select_it"
        android:textColor="#EF6C00"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/word1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:strokeWidth="2"
            android:strokeColor="#FFD180"
            android:text="@string/button_placeholder"
            android:textColor="#DD2C00" />

        <Button
            android:id="@+id/word2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:strokeWidth="2"
            android:strokeColor="#FFD180"
            android:text="@string/button_placeholder"
            android:textColor="#DD2C00" />

        <Button
            android:id="@+id/word3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:strokeWidth="2"
            android:strokeColor="#FFD180"
            android:text="@string/button_placeholder"
            android:textColor="#DD2C00" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/word4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:strokeWidth="2"
            android:strokeColor="#FFD180"
            android:text="@string/button_placeholder"
            android:textColor="#DD2C00" />

        <Button
            android:id="@+id/word5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:strokeWidth="2"
            android:strokeColor="#FFD180"
            android:text="@string/button_placeholder"
            android:textColor="#DD2C00" />
    </TableRow>

    <Button
        android:id="@+id/mult_words"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:strokeWidth="2"
        android:text="@string/i_hear_multiple_words"
        android:textColor="#DD2C00" />

    <Button
        android:id="@+id/no_word"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/my_word_is_not_shown"
        android:textColor="#DD2C00" />

</TableLayout>