<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstUseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_sonar_this_page_introduces_you_to_the_main_control_paradimes_of_this_app" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_the_startpage_you_may_see_three_different_tiles_representing_speakers" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_sketch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/card_on">

                <RelativeLayout
                    android:id="@+id/layout_sketch"
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:id="@+id/image_sketch"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        app:srcCompat="@drawable/lock" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_toEndOf="@+id/image_sketch"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:selectAllOnFocus="false"
                                android:singleLine="true"
                                android:text="@string/paired_and_available"
                                android:textSize="24sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:background="?android:attr/listDivider" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:text="@string/uuid_and_ip" />
                        </LinearLayout>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@android:drawable/ic_menu_delete"
                            android:visibility="visible" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/card_on">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:background="@color/card_on"
                        app:srcCompat="@drawable/unlock" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:selectAllOnFocus="false"
                                android:singleLine="true"
                                android:text="@string/not_paired_and_available"
                                android:textSize="24sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:background="?android:attr/listDivider"
                                android:layout_height="2dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:text="@string/uuid_and_ip" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/card_off">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:background="@color/card_off"
                        app:srcCompat="@drawable/lock" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="8dp"
                                android:background="@android:color/transparent"
                                android:ems="10"
                                android:selectAllOnFocus="false"
                                android:singleLine="true"
                                android:text="@string/paired_and_unavailable"
                                android:textSize="24sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:background="?android:attr/listDivider"
                                tools:ignore="NestedWeights" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:text="@string/uuid_" />
                        </LinearLayout>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@android:drawable/ic_menu_delete"
                            android:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_delete_connections_by_using_the_trashcan_icon_entirely_new_speakers_that_were_never_set_up_before_are_automatically_detected_by_the_app_and_a_popup_asks_you_whether_you_want_to_set_it_up" />

            <Button
                android:id="@+id/first_use_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okay" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>